# Qt5-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: StringListUtils.cmake
Src/: CMakeLists.txt  EntryPoint.cpp
Src/Main/: mainwindow.cpp  mainwindow.ui
Src/Resources/Files/Icon/: Icon.qrc
Src/Resources/Translations/: HelloWorld_en_US.ts  HelloWorld_zh_CN.ts
Src/Test/: CMakeLists.txt  MainTest.cpp
