# Target: 测试程序入口
set(TEST_SRC_EXPRESSIONS "*.ui" "*.c" "*.cpp" "*.hpp" "*.cc")
file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES true ${TEST_SRC_EXPRESSIONS})
list(APPEND TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR})
foreach (item IN LISTS TEST_SOURCES)
    if (IS_DIRECTORY ${item})
        list(APPEND TEST_INCLUDE_DIR ${item})
        continue()
    endif()
    list(APPEND TEST_SRC ${item})
endforeach()

add_executable(${PROJECT_NAME}_Test ${TEST_SRC} ${LOCALIZATION_FILES})
target_include_directories(${PROJECT_NAME}_Test PUBLIC ${TEST_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME}_Test PUBLIC MainLibrary)
